# ai-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: API_REFERENCE.md  DEVELOPER.md  INDEX.md  USER_GUIDE.md
scripts/checkers/: check_bash.sh  check_python.sh  check_uv.sh
scripts/installers/: install_python.sh
scripts/transformers/: version_bumper.py
src/ai_cli/: asyn.py  main.py  settings.py  utils.py
src/ai_cli/commands/: __init__.py  filterlog.py
src/ai_cli/commands/log/: __init__.py  line_filter.py
src/ai_cli/options/: __init__.py  version.py
src/ai_cli/validators/: files.py
test/resources/: pyproject_beta.toml  pyproject_prerelease.toml  pyproject_regular.toml
test/unit/: conftest.py
test/unit/commands/: test_filterlog.py
test/unit/commands/log/: __init__.py  test_line_filter.py
test/unit/transformers/: test_version_bumper.py
